--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,11 +1,9 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
+# This workflow will install Python dependencies and run tests
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
 name: Python application
 
 on:
-  push:
-    branches: [feature-001]
   pull_request:
     branches: [feature-001]
 
@@ -23,6 +21,15 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Test with pytest
-      run: |
-        pytest -m a test_square.py
+    test:
+      runs-on: ubuntu-latest
+      steps:
+      - name: Test with pytest
+        run: |
+          pytest -m a test_square.py
+      deploy:
+      runs-on: ubuntu-latest
+      steps:
+      - name: Deploy the build
+        run: |
+          echo "Sucessfully build!"
